betree/tests/src/snapshots/betree_tests__insert single__deleted foo.snap
---
source: betree/tests/src/lib.rs
expression: "json!({\n        \"shape/data\" :\n        self.object_store.data_tree().tree_dump().expect(\"Failed to create data tree dump\"),\n        \"keys/data\" : self.object_store.data_tree().range :: < _, & [u8] >\n        (..).expect(\"Failed to query data keys\").map(| res |\n        res.map(| (k, _v) | k)).collect :: < Result < Vec < _ >, _ >>\n        ().expect(\"Failed to gather data keys\"), \"keys/meta\" :\n        self.object_store.meta_tree().range :: < _, & [u8] >\n        (..).expect(\"Failed to query meta keys\").map(| res |\n        res.map(| (k, _v) | k)).collect :: < Result < Vec < _ >, _ >>\n        ().expect(\"Failed to gather meta keys\")\n    })"
---
{
  "keys/data": [
    [
      0,
      111,
      105,
      100
    ]
  ],
  "keys/meta": [],
  "shape/data": {
    "children": [
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": null,
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 0017"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 0017",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 002F"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 002F",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 0047"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 0047",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 005F"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 005F",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 0077"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 0077",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 008F"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 008F",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 00A7"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 00A7",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 00BF"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 00BF",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 00D7"
      },
      {
        "child": {
          "entry_count": 24,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 00D7",
        "storage": 0,
        "to": "0000 0000 0000 0000 0000 00EF"
      },
      {
        "child": {
          "entry_count": 11,
          "level": 0,
          "storage": 0,
          "system_storage": 254,
          "type": "leaf"
        },
        "from": "0000 0000 0000 0000 0000 00EF",
        "storage": 0,
        "to": null
      }
    ],
    "level": 1,
    "storage": 0,
    "system_storage": 254,
    "type": "internal"
  }
}
